--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-246.3KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-955.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇺🇸 美国-536.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-4.05MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.68.135.18, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-485.9KB/s(Youtube:不良林), server: 38.68.135.18, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-581.1KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.86MB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
+  - {name: 🇬🇧 英国-1.51MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-962.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.10MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林), server: flb.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: flb.alinkrelay.com, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-681.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-998.6KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
       - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
+      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
+      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
