--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-581.1KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.86MB/s(Youtube:不良林), server: 36.134.154.119, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇬🇧 英国-1.51MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-962.6KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.10MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林), server: flb.alinkrelay.com, port: 12000, type: trojan, password: 80114348-eea5-43b3-8705-2da4430d3074, sni: flb.alinkrelay.com, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-681.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-941.7KB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-895.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-170.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-998.6KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.82MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-581.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇺🇸 美国-962.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
-      - 🇵🇭 菲律宾-1.20MB/s(Youtube:不良林)
-      - 🇬🇧 英国-681.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
       - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
