--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-941.7KB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-895.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-170.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.63MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-998.6KB/s(Youtube:不良林), server: chess.magicefire.com, port: 443, type: vmess, uuid: 9aa80017-3427-4165-a522-f5f9a11330d0, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.82MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.30MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-747.1KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇯🇵 日本-3.14MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-514.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65035, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.68.135.18, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-864.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.64MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-326.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇸🇬 新加坡-2.85MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
-      - 🇺🇸 美国-895.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-170.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.63MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-998.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-326.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
