--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-747.1KB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65038, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-3.14MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-514.0KB/s(Youtube:不良林), server: 116.129.254.177, port: 65035, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.68.135.18, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-941.7KB/s(Youtube:不良林), server: cn02.downloadmovie.cn, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.86MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-215.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-8.92MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-864.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-3.64MB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-747.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-514.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-941.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.86MB/s(Youtube:不良林)
+      - 🇨🇳 中国-215.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
       - 🇨🇳 中国-864.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-3.64MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
